Avance cambios MA2021: CuestionarioCovid19 y Verificar Fotografía

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -75,6 +75,7 @@
         <item>@string/main_super</item>
         <item>@string/main_survey</item>
         <item>@string/main_ingreso</item>
+        <item>@string/main_photography</item>
     </string-array>
 
     <string-array name="menu_info">
