--- a/res/values/strings_main.xml
+++ b/res/values/strings_main.xml
@@ -20,5 +20,5 @@
     <string name="main_mapa">Ver Mapa</string>
     <string name="main_survey">Encuesta Satisfacción</string>
     <string name="main_ingreso">Nuevo Ingreso</string>
-    
+    <string name="main_photography">Verificar fotografía</string>
 </resources>
