--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -144,11 +144,13 @@
         <item>@string/samples_caso</item>
         <item>@string/sint</item>
         <item>@string/aislamiento</item>
+        <item>@string/gift</item>
     </string-array>
 
     <string-array name="menu_visita_final_covid19">
         <item>@string/samples_caso</item>
         <item>@string/sint</item>
+        <item>@string/gift</item>
     </string-array>
 
 </resources>
