--- a/res/values/strings_preferences.xml
+++ b/res/values/strings_preferences.xml
@@ -13,7 +13,7 @@
 
     <string name="app_preferences">Configuración Aplicación</string>
     <string name="update_app_preferences">Actualizar Aplicación</string>
-    <string name="version_app_preferences">Versión 5.9.2.1</string>
-    <string name="versiondate_app_preferences">Ago 19, 2021</string>
+    <string name="version_app_preferences">Versión 5.9.4.0</string>
+    <string name="versiondate_app_preferences">Sep 22, 2021</string>
 
 </resources>
