Versión 5.11.0.0 1. En el módulo de transmisión de influenza, se agrega campo "positivo por"  para ingresar si fue por PCR o PR. 2. En el módulo de positivos de influenza (uo1 o influenza)  se agrega campo para ingresar "FIS" al momento de activar el caso. Es requerida la FIS o la FIF. 3. Se modifica etiqueta de "Estudio UO1" a "Estudios Flu (UO1, Influenza)", para indicar que es tanto UO1 como CEIRS. 4. En muestras de seguimiento influenza se modifica la validación del código de la muestra para que permita ingresar los códigos con FRI, FPI, FRF, FPF. 5. Si el participante es de Influenza(CEIRS) y está en seguimiento se muestra mensaje similar al que se muestra para los que pertenecen a UO1. 6. Cantidad de días para ingreso de síntomas en seguimiento influenza,  va desde 1 hasta los 28 según el CRF. 7. Ordenar por código de participante la lista de positivos Influenza.

--- a/res/values/strings_main.xml
+++ b/res/values/strings_main.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="main_1">Estudio Cohorte Familia</string>
     <string name="main_2">Estudio Cohorte Pediatrica</string>
-    <string name="main_3">Estudio UO1</string>
+    <string name="main_3">Estudios FLU(UO1, Influenza)</string>
     <string name="main_4">Estudio COVID-19</string>
     <string name="barrio">Barrio</string>
     <string name="manzana">Manzana</string>
