Cambios generales solicitados

--- a/res/values/strings_tamizaje.xml
+++ b/res/values/strings_tamizaje.xml
@@ -169,9 +169,9 @@
     <string name="formato712Asentimiento">Recuerde Adjuntar formato de asentimiento de 7 a 12 años</string>
     <string name="formato1317Asentimiento">Recuerde Adjuntar formato de asentimiento de 13 a 17 años</string>
 
-    <string name="aceptaParteBInf">Parte B Influenza</string>
+    <string name="aceptaParteBInf">Parte B UO1</string>
     <string name="aceptaParteBInfHint">¿Acepta Parte B Almacenamiento y uso de Muestras en Estudios Futuros?</string>
-    <string name="aceptaParteCInf">Parte C Influenza</string>
+    <string name="aceptaParteCInf">Parte C UO1</string>
     <string name="aceptaParteCInfHint">¿Acepta Parte C Estudios Genéticos?</string>
 
     <string name="nombreContacto">Nombre del contacto</string>
