--- a/res/values/strings_uo1.xml
+++ b/res/values/strings_uo1.xml
@@ -15,8 +15,8 @@
     <string name="ocentrosaludUO1">10.1.1 Indique otro centro de salud</string>
     <string name="puestosaludUO1">10.2 ¿Cuál puesto de salud?</string>
     <string name="aceptaContactoFuturoUO1">11. Contacto en el futuro</string>
-    <string name="aceptaParteBInfUO1">12. Parte B UO1</string>
-    <string name="aceptaParteCInfUO1">13. Parte C UO1</string>
+    <string name="aceptaParteBInfUO1">Parte B UO1</string>
+    <string name="aceptaParteCInfUO1">Parte C UO1</string>
     <string name="asentimientoUO1">14. ¿Dio el niño Asentimiento verbal?</string>
     <string name="noCumpleIncUO1">El participante no cumple los criterios de Inclusión/Exclusión. No podemos ingresarlo en el estudio</string>
 
