--- a/res/values/strings_preferences.xml
+++ b/res/values/strings_preferences.xml
@@ -4,7 +4,7 @@
     <string name="preferences">Configuración</string>
 
     <string name="server_preferences">Configuración Servidor</string>
-    <string name="default_server_url">http://192.168.1.98:8080/estudios-ics</string>
+    <string name="default_server_url">http://nicaumich2.miserver.it.umich.edu/estudios-ics</string>
     <string name="server_url">URL de servidor</string>
     <string name="check_server">Verificar en el servidor</string>
     <string name="check_wipe">Limpiar base de datos</string>
@@ -13,7 +13,7 @@
 
     <string name="app_preferences">Configuración Aplicación</string>
     <string name="update_app_preferences">Actualizar Aplicación</string>
-    <string name="version_app_preferences">Versión 6.0.0.2</string>
-    <string name="versiondate_app_preferences">Mar 04, 2022</string>
+    <string name="version_app_preferences">Versión 6.1.2.1</string>
+    <string name="versiondate_app_preferences">Mar 15, 2022</string>
 
 </resources>
