--- a/res/values/strings_preferences.xml
+++ b/res/values/strings_preferences.xml
@@ -13,7 +13,7 @@
 
     <string name="app_preferences">Configuración Aplicación</string>
     <string name="update_app_preferences">Actualizar Aplicación</string>
-    <string name="version_app_preferences">Versión 6.1.6.1</string>
-    <string name="versiondate_app_preferences">Abr 29, 2022</string>
+    <string name="version_app_preferences">Versión 6.1.6.2</string>
+    <string name="versiondate_app_preferences">May 09, 2022</string>
 
 </resources>
