Versión 6.2.0.0 Se agregan funcionalidades para trabajo de entomología. Equipo Harold Suazo Registro de Cuestionario dirigido a hogares – Mundo Post Zika

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -153,4 +153,12 @@
         <item>@string/gift</item>
     </string-array>
 
+    <string-array name="menu_entomologia">
+        <item>@string/agregar_cuestionario</item>
+        <item>@string/listar_cuestionario</item>
+        <item>@string/download</item>
+        <item>@string/upload</item>
+        <item>@string/exit</item>
+    </string-array>
+
 </resources>
