Versión 6.2.1.0 Se agregan funcionalidades para trabajo de entomología - Cuestionario Puntos Claves. Equipo Harold Suazo Se agrega campo para ingresar valor de otra razón de visita de terreno no exitosa

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -156,6 +156,8 @@
     <string-array name="menu_entomologia">
         <item>@string/agregar_cuestionario</item>
         <item>@string/listar_cuestionario</item>
+        <item>@string/agregar_cuest_pc</item>
+        <item>@string/listar_cuest_pc</item>
         <item>@string/download</item>
         <item>@string/upload</item>
         <item>@string/exit</item>
