Cambios solicitados para medición de áreas Ocultar menu encuesta casa en Estudio Cohorte Familia

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -23,7 +23,7 @@
 
     <string-array name="menu_casa">
         <item>@string/participants</item>
-        <item>@string/new_survey_1</item>
+<!--        <item>@string/new_survey_1</item>-->
         <item>@string/rooms</item>
         <item>@string/environments</item>
         <item>@string/phones</item>
