--- a/res/menu/menu_info.xml
+++ b/res/menu/menu_info.xml
@@ -45,6 +45,7 @@
             <!--MA2020<item android:id="@+id/ENCASA_SA" android:title="@string/new_house_sa_survey"/>
             <item android:id="@+id/ENPART_SA" android:title="@string/new_participant_sa_survey"/>-->
             <item android:id="@+id/COORDENADAS" android:title="@string/info_coordenadas"/>
+            <item android:id="@+id/PABDOMINAL" android:title="@string/info_pabdominal"/>
         </menu>
     </item>
 
