--- a/res/layout-w720dp/layout_data_enter.xml
+++ b/res/layout-w720dp/layout_data_enter.xml
@@ -21,7 +21,7 @@
         android:orientation="horizontal"
         style="?android:attr/buttonBarStyle">
 
-        <Button
+        <!--<Button
             android:background="@drawable/selectable_item_background"
             android:id="@+id/prev_button"
             android:layout_width="0dp"
@@ -37,7 +37,26 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="@string/next"
-            style="?android:attr/buttonBarStyle" />
+            style="?android:attr/buttonBarStyle" />-->
+        <Button
+                android:background="@drawable/selectable_item_background"
+                android:id="@+id/save_button"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="@string/save"
+                android:drawableTop="@drawable/ic_menu_save"
+                style="?android:attr/buttonBarStyle" />
+
+        <Button
+                android:background="@drawable/selectable_item_background"
+                android:id="@+id/cancel_button"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="@string/cancel"
+                android:drawableTop="@drawable/ic_menu_close_clear_cancel"
+                style="?android:attr/buttonBarStyle" />
 
     </LinearLayout>
 
