--- a/res/menu/menu_info.xml
+++ b/res/menu/menu_info.xml
@@ -46,6 +46,7 @@
             <item android:id="@+id/ENPART_SA" android:title="@string/new_participant_sa_survey"/>-->
             <item android:id="@+id/COORDENADAS" android:title="@string/info_coordenadas"/>
             <item android:id="@+id/PABDOMINAL" android:title="@string/info_pabdominal"/>
+            <item android:id="@+id/ENCSATUSU" android:title="@string/info_encSatUsu"/>
         </menu>
     </item>
 
